# understand_computer

./: .gitignore  README.md
C++/Command/: CMakeLists.txt
C++/Command/include/: Command.h  GarageDoor.h  GarageDoorOpenCommand.h  Light.h  LightOnCommand.h  SimpleRemoteControl.h
C++/Command/src/: GarageDoor.cpp  GarageDoorOpenCommand.cpp  Light.cpp  LightOnCommand.cpp  SimpleRemoteControl.cpp  main.cpp
chapter3/: graph3.11.c  mstore.c  prog
chapter5/: .clear_array.c.un~  .list_len.c.un~  .write_read.c.un~  clear_array.c  list_len.c
chapter7/: addvec.c  dll.c  foo5.c  g_f.c  int.c  main.c  main2.c  main2_vector.md  malloc.h  multvec.c  mymalloc.c  prog2r  sum.c  vector.h
chapter8/: cpfile.c  memlib.c  mm.c  rio_readn.c  rio_writen.c  sigint.c  waitpid1.c
chpater2/: show_bytes.c
introduction_to_algorithms/: LCS.py  binarytree.py  breadth_first_search.py  deep_first_search.py  fibonacci.py  matrix_multiply.py  minimal_spanning_tree_prim.py  power_of_N.py  ps_rand.py  ps_select_which_min.py  ps_sort.py  recursive_activity_selector.py
java/: srclist.txt
line_dection/: line_detec.py  line_func.py  static_line.py
multiprocess/: alarm_read.c  call_system.c  echoall  echoall.c  echoarg  echoarg.c  err_sys.c  err_sys.h  exec.c  exit_status.c  fork.c  fork_race.c  fork_two.c  nice_ps.c  pre_exit.c  printuids.c  process_account.c  pthread_cleanup_pop_push.c  pthread_mutex.c  pthread_two_mutex.c  re_pthread_two_mutex.c  signal_usr.c  system.c  testinterp  testinterp.c  thread_exit.c  thread_exit_err.c  thread_ps.c  time_ps.c  tsys_system.c  vfork.c  (+1 more)
paper/: grid.h  (+5 more)
(+6879 files in other folders)
